<resources>
    <string name="app_name">App Embedded System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- activity_login-->

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Ok">Ok</string>

    <string name="enter_password">Enter password</string>
    <string name="no_password">No password</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="retype_password">Retype password</string>

    <string name="fail_login">Login fail</string>

    <!-- activity_main-->
    <string name="no_internet">No internet connection</string>
</resources>
