<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/ed_password_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cloud_blue_150dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/ed_password_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="197dp"
        android:enabled="false"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/ed_password_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="250dp"
        android:enabled="false"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorGray"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_2"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_1"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_2"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_3"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_3"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_4"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_5"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_6"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_4"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_7"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_8"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_9"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/_0"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bgr_button_passwd"
            android:text="@string/Ok"
            android:textColor="@color/colorBtnPasswd"
            android:textSize="25sp" />
    </LinearLayout>

</RelativeLayout>